# votix

./: .gitignore  Dockerfile  README.md  api.http  rangeMap.ipynb  requirements.txt
app/: pyproject.toml  requirements.txt
app/app/: candidato.py  dadosCargos.py  dadosPartidos.py  deputado.py  partidos.py  ranking.py  utils.py
app/app/data/: cargos.json  cargos_descricao.json  cargos_geral.json  partidos.json  stopwords.txt
app/app/data/bens/: bens-ano.csv
app/app/data/vagas/: consulta_vagas_2022_AM.csv  consulta_vagas_2022_AP.csv  consulta_vagas_2022_BA.csv  consulta_vagas_2022_BR.csv  consulta_vagas_2022_BRASIL.csv  consulta_vagas_2022_CE.csv  consulta_vagas_2022_ES.csv  consulta_vagas_2022_GO.csv  consulta_vagas_2022_MS.csv  consulta_vagas_2022_MT.csv  consulta_vagas_2022_PB.csv  consulta_vagas_2022_RJ.csv  consulta_vagas_2022_RO.csv  consulta_vagas_2022_SE.csv  consulta_vagas_2022_SP.csv  consulta_vagas_2022_TO.csv  consulta_vagas_2024_AC.csv  consulta_vagas_2024_AL.csv  consulta_vagas_2024_AM.csv  consulta_vagas_2024_AP.csv  consulta_vagas_2024_BA.csv  consulta_vagas_2024_BRASIL.csv  consulta_vagas_2024_CE.csv  consulta_vagas_2024_ES.csv  consulta_vagas_2024_GO.csv  consulta_vagas_2024_MA.csv  consulta_vagas_2024_MG.csv  consulta_vagas_2024_MS.csv  consulta_vagas_2024_MT.csv  consulta_vagas_2024_PA.csv  consulta_vagas_2024_PB.csv  consulta_vagas_2024_PE.csv  consulta_vagas_2024_PI.csv  consulta_vagas_2024_PR.csv  consulta_vagas_2024_RJ.csv  (+8 more)
app/app/pages/: candidato.py  deputado.py  eleicoes.py  filtro.py  legislacao.py  partido.py  partidos.py  sobre.py
(+159 files in other folders)
