[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["amarabuco"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7"
plotly = "^5.10.0"
requests = "^2.28.1"
stqdm = "^0.0.4"
wordcloud = "^1.8.2"
bs4 = "^0.0.1"
streamlit = "^1.12.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
